// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserReducer should handle all defined error types: rejected types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "DELETE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types PLATFORM_USER_AUTH 1`] = `
Object {
  "result": Object {
    "auth": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "errors": Object {},
    "locale": Object {},
    "optin": Object {},
  },
  "type": "PLATFORM_USER_AUTH_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "UPDATE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types USER_LOCALE 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "optin": Object {},
  },
  "type": "USER_LOCALE_REJECTED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "DELETE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types PLATFORM_USER_AUTH 1`] = `
Object {
  "result": Object {
    "auth": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "errors": Object {},
    "locale": Object {},
    "optin": Object {},
  },
  "type": "PLATFORM_USER_AUTH_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "UPDATE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_LOCALE 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "optin": Object {},
  },
  "type": "USER_LOCALE_FULFILLED",
}
`;

exports[`UserReducer should handle all defined pending types: pending types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
  },
  "type": "DELETE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
  },
  "type": "GET_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types PLATFORM_USER_AUTH 1`] = `
Object {
  "result": Object {
    "auth": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
    "errors": Object {},
    "locale": Object {},
    "optin": Object {},
  },
  "type": "PLATFORM_USER_AUTH_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
  },
  "type": "UPDATE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types USER_LOCALE 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
    "optin": Object {},
  },
  "type": "USER_LOCALE_PENDING",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 400 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {},
    "locale": Object {},
    "optin": Object {},
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 401 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {
      "data": Array [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 401",
      "status": 401,
    },
    "locale": Object {},
    "optin": Object {},
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 403 1`] = `
Object {
  "result": Object {
    "auth": Object {},
    "errors": Object {
      "data": Array [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 403",
      "status": 403,
    },
    "locale": Object {},
    "optin": Object {},
  },
  "type": "4XX",
}
`;
